--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -145,9 +145,9 @@ jobs:
       - name: Export E2E directory
         run: |
           if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
-            echo "E2E_DIR=\"$(pwd)\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
-            echo "E2E_DIR=\"$(pwd)test/e2e/source\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
           fi
 
       - name: Remove DNS search domain
@@ -238,9 +238,9 @@ jobs:
       - name: Export E2E directory
         run: |
           if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
-            echo "E2E_DIR=\"$(pwd)\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
-            echo "E2E_DIR=\"$(pwd)test/e2e/source\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
           fi
 
       - name: Remove DNS search domain
@@ -327,9 +327,9 @@ jobs:
       - name: Export E2E directory
         run: |
           if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
-            echo "E2E_DIR=\"$(pwd)\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
-            echo "E2E_DIR=\"$(pwd)test/e2e/source\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
           fi
 
       - name: Install kind
@@ -392,9 +392,9 @@ jobs:
       - name: Export E2E directory
         run: |
           if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
-            echo "E2E_DIR=\"$(pwd)\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
-            echo "E2E_DIR=\"$(pwd)test/e2e/source\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
           fi
 
       - uses: actions/setup-go@v3
@@ -475,9 +475,9 @@ jobs:
       - name: Export E2E directory
         run: |
           if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
-            echo "E2E_DIR=\"$(pwd)\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
-            echo "E2E_DIR=\"$(pwd)test/e2e/source\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
           fi
 
       - uses: actions/setup-go@v3
@@ -806,9 +806,9 @@ jobs:
       - name: Export E2E directory
         run: |
           if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
-            echo "E2E_DIR=\"$(pwd)\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
-            echo "E2E_DIR=\"$(pwd)test/e2e/source\"" >> "$GITHUB_ENV"
+            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
           fi
 
       - name: Remove DNS search domain
