--- a/kubeovn-helm/templates/monitor-deploy.yaml
+++ b/kubeovn-helm/templates/monitor-deploy.yaml
@@ -53,6 +53,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
+            - name: POD_IPS
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIPs
           resources:
             requests:
               cpu: 200m
