--- a/yamls/ovn-ha.yaml
+++ b/yamls/ovn-ha.yaml
@@ -244,6 +244,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: POD_IPS
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIPs
           resources:
             requests:
               cpu: 500m
