add installation test for underlay logical gateway

--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -604,6 +604,42 @@ jobs:
       - name: Cleanup
         run: sh dist/images/cleanup.sh
 
+  underlay-logical-gateway-installation-test:
+    needs: build-kube-ovn
+    name: Underlay Logical Gateway Installation Test
+    runs-on: ubuntu-22.04
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install kind
+        run: |
+          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
+          chmod +x ./kind
+          sudo mv kind /usr/local/bin
+
+      - name: Download image
+        uses: actions/download-artifact@v3
+        with:
+          name: kube-ovn
+
+      - name: Load image
+        run: docker load --input kube-ovn.tar
+
+      - name: Create kind cluster
+        run: |
+          sudo pip3 install j2cli
+          sudo pip3 install "j2cli[yaml]"
+          sudo PATH=~/.local/bin:$PATH make kind-init
+          sudo cp -r /root/.kube/ ~/.kube/
+          sudo chown -R $(id -un). ~/.kube/
+
+      - name: Install Kube-OVN
+        run: make kind-install-underlay-logical-gateway-dual
+
+      - name: Cleanup
+        run: sh dist/images/cleanup.sh
+
   no-ovn-lb-test:
     needs: build-kube-ovn
     name: Disable OVN LB Test
@@ -880,6 +916,7 @@ jobs:
       - kube-ovn-ic-conformance-e2e
       - lb-svc-e2e
       - ha-installation-test
+      - underlay-logical-gateway-installation-test
       - chart-installation-test
       - installation-compatibility-test
       - no-ovn-lb-test
